--- a/website/css/map.css
+++ b/website/css/map.css
@@ -18,9 +18,9 @@ a {
 
 /* Legend style */
 .info {
-    position: absolute;
-    background-color: #fff;
-    background-color: rgba(255,255,255,0.9);
+    position: realtive;
+    background-color: coral;/*#fff;*/
+    /*background-color: rgba(255,255,255,0.9);*/
     bottom: 10px;
     left: 10px;
     padding: 10px;
