--- a/website/css/map.css
+++ b/website/css/map.css
@@ -66,7 +66,11 @@ a {
     position: absolute;
 	bottom: -730px;
 	left: 10px;
+	width: 100%;
+	background-color: #F0F8FF;/*#fff;*/
 }
+
+
 
 .timescale {
     position: absolute;
